# python-api_rest-flask-libreria

./: .gitignore  pyproject.toml  readme.md
atests/features/: app.feature
atests/steps/: app_steps.py
collections/app/: bruno.json  collection.bru
collections/app/environments/: test.bru
collections/app/productos/: crear producto.bru  eliminar un product.bru  modificar producto.bru  todos los productos.bru  un solo producto por id.bru  un solo producto por nombre.bru
src/: app.py  auth.py  controllers.py  models.py  routes.py
tests/: test_api.py  test_app.py
