[tool.poetry]
name = "rest-api-libreria"
version = "0.1.0"
description = "Rest API CRUD enfocada en una libreria"
authors = ["Angel Gerardo Molina Valdez <angelgerardomolinavaldez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
flask-httpauth = "^4.8.0"
assertpy = "^1.1"


[tool.poetry.group.test.dependencies]
assertpy = "^1.1"
pytest = "^7.4.4"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
